<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_Ammunition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Ammunition"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/tv_Personnel_Name" />

    <TextView
        android:id="@+id/tv_Issue_Detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Issuing: Detail Name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Personnel_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Personnel Name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/tv_Issue_Detail" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="730dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="15dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="377dp" />

    <ListView
        android:id="@+id/lv_Issue_Ammunition"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/tv_Ammunition"
        tools:layout_width="0dp" />

    <TextView
        android:id="@+id/tv_Signature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Signature"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/lv_Issue_Ammunition" />

    <Button
        android:id="@+id/btn_ClearPad"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:text="@string/Clear_Pad"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/tv_Signature" />

    <Button
        android:id="@+id/btn_Validate"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:text="@string/Validate"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline7" />

    <TextView
        android:id="@+id/tv_To_Be_Issued"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="To be Issued:"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/lv_Issue_Ammunition"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/tv_Personnel_Name" />

    <View
        android:id="@+id/view_Signature_Pad"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_Validate"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ClearPad" />

</androidx.constraintlayout.widget.ConstraintLayout>