<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tv_Issue_Return_Receive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Is/Ret/Rec: "
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_Detail_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Detail Name"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_Ammunition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Ammunition"
        android:textSize="24sp"
 />

    <TextView
        android:id="@+id/tv_Personnel_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Personnel Name"
        android:textSize="24sp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_Issue_Ammunition"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    <TextView
        android:id="@+id/tv_Signature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recipient Signature:"
        android:textSize="24sp" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom|right">


    <Button
        android:id="@+id/btn_ClearPad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/Clear_Pad"
        android:theme="@style/Button.Light"/>
            </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.github.gcacace.signaturepad.views.SignaturePad
            android:id="@+id/Signature_Pad"
            android:layout_width="500dp"
            android:layout_height="300dp"
            android:background="#F4F3F3"
            app:penColor="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_Validate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/Validate"
        android:theme="@style/Button.Light"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

</LinearLayout>