<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.safacgsoca3app.DisplayPersonnelInfoActivity">

    <TextView
        android:id="@+id/tv_Display_Personnel_Info_Return_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Return"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_Display_Personnel_Info_Issue_Text"
        app:layout_constraintTop_toBottomOf="@+id/tv_Display_Personnel_Info_Issue_Remark" />

    <TextView
        android:id="@+id/tv_Display_Personnel_Info_Detail_Name"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="80dp"
        android:text="Detail Name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Display_Personnel_Info_Personnel_Name"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:text="Personnel_Name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_Display_Personnel_Info_Detail_Name"
        app:layout_constraintTop_toBottomOf="@+id/tv_Display_Personnel_Info_Detail_Name" />

    <TextView
        android:id="@+id/tv_Display_Personnel_Info_Ops_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Ops_Name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Display_Personnel_Info_Remarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Personnel_Remarks"
        app:layout_constraintStart_toStartOf="@+id/tv_Display_Personnel_Info_Personnel_Name"
        app:layout_constraintTop_toBottomOf="@+id/tv_Display_Personnel_Info_Personnel_Name" />

    <TextView
        android:id="@+id/tv_Display_Personnel_Info_Ammunition_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Ammunition"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_Display_Personnel_Info_Remarks"
        app:layout_constraintTop_toBottomOf="@+id/tv_Display_Personnel_Info_Remarks" />

    <TextView
        android:id="@+id/tv_Display_Personnel_Info_Issue_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Issue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_Display_Personnel_Info_Ammunition_Text"
        app:layout_constraintTop_toBottomOf="@+id/lv_Personnel_Ammunition" />

    <TextView
        android:id="@+id/tv_Display_Personnel_Info_Issue_Remark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Issue_Remark"
        app:layout_constraintStart_toStartOf="@+id/tv_Display_Personnel_Info_Issue_Text"
        app:layout_constraintTop_toBottomOf="@+id/tv_Display_Personnel_Info_Issue_Text" />

    <TextView
        android:id="@+id/tv_Display_Personnel_Info_Return_Remark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Return_Remark"
        app:layout_constraintStart_toStartOf="@+id/tv_Display_Personnel_Info_Return_Text"
        app:layout_constraintTop_toBottomOf="@+id/tv_Display_Personnel_Info_Return_Text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="400dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="15dp" />

    <ListView
        android:id="@+id/lv_Personnel_Ammunition"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toStartOf="@+id/gl_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/gl_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_Display_Personnel_Info_Ammunition_Text" />

</androidx.constraintlayout.widget.ConstraintLayout>